--- a/index.css
+++ b/index.css
@@ -1,5 +1,71 @@
 html, body {
     margin: 0;
     padding: 0;
+    font-family: sans-serif;
+    display: flex;
+    justify-content: center;
 }
 
+
+section {
+    margin-bottom: 25px;
+}
+
+.container {
+    /* width: 375px; */
+    margin: 0 auto;
+    background-color: #ffffff;
+}
+
+.user-img {
+    width: 34px;
+    border-radius: 50%;
+}
+
+.oldogram {
+    width: 127px;
+    margin: 0;
+}
+
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 2px solid #EDEDED;
+}
+
+.profile-img {
+    width: 34px;
+    border-radius: 50%;
+    margin: 10px;
+}
+
+.post-detail {
+    display: flex;
+    justify-content: left;
+    align-items: center;
+}
+
+.user-name {
+    display: block;
+}
+
+.post-img {
+    width: 375px;
+}
+
+.icon {
+    width: 23px;
+    padding: 10px;
+    cursor: pointer;
+}
+
+#footer {
+    margin: 0;
+    padding: 10px 10px 0 10px;
+}
+
+.main {
+    width: 375px;
+    background-color: #EDEDED;
+}
